#113: make quote smaller to avoid whitespace above last line

--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -254,7 +254,7 @@ section {
 
     .quote-icon-left, .quote-icon-right {
       color: lighten($primary, 40);
-      font-size: 26px;
+      font-size: 19px;
     }
 
     .quote-icon-left {
